# flet-material-symbols

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publishing.yaml
scripts/: generate_icons.py
src/flet_material_symbols/: __init__.py  symbols.json  symbols.py  symbols.pyi
src/flutter/flet_material_symbols/: pubspec.yaml
src/flutter/flet_material_symbols/lib/: flet_material_symbols.dart
src/flutter/flet_material_symbols/lib/src/: extension.dart  symbols_icons.dart
