[project]
name = "flet-material-symbols"
version = "0.1.0"
description = "Material Symbols icons for Flet apps."
readme = "README.md"
authors = [{ name = "Creeper19472", email = "creeper19472@crpteam.club" }]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://github.com/Creeper19472/flet-material-symbols"
Documentation = "https://github.com/Creeper19472/flet-material-symbols"
Repository = "https://github.com/Creeper19472/flet-material-symbols"
Issues = "https://github.com/Creeper19472/flet-material-symbols/issues"

[tool.setuptools.package-data]
"flet_material_symbols" = ["*.json"]
"flutter.flet_material_symbols" = [
    "pubspec.yaml",
    "lib/**",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
